# eezy-logging

./: LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: test.yml
eezy_logging/: __init__.py  handler.py  serializer.py  worker.py
eezy_logging/queues/: __init__.py  base.py  deque.py  memory.py  redis.py
eezy_logging/sinks/: __init__.py  base.py  elasticsearch_sink.py  opensearch_sink.py
eezy_logging/utils/: __init__.py
tests/: __init__.py  test_deque_queue.py  test_elasticsearch_integration.py  test_handler.py  test_ilm_policy.py  test_ism_policy.py  test_memory_queue.py  test_opensearch_integration.py  test_redis_queue.py  test_serializer.py  test_worker.py
