[project]
name = "eezy-logging"
version = "0.1.0"
description = "A non-blocking, queue-based Python logging library for shipping logs to Elasticsearch and other destinations"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["logging", "elasticsearch", "opensearch", "async", "queue"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Logging",
]
dependencies = [
    "elasticsearch>=9.2.1",
    "opensearch-py>=3.1.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
elasticsearch = ["elasticsearch>=8.0"]
opensearch = ["opensearch-py>=2.0"]
all = ["redis>=5.0", "elasticsearch>=8.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eezy_logging"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "ipython>=9.9.0",
]
