[project]
name = "eezy-logging"
version = "0.1.0"
description = "A non-blocking, queue-based Python logging library for shipping logs to Elasticsearch and other destinations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["logging", "elasticsearch", "opensearch", "async", "queue"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
redis = ["redis>=5.0"]
elasticsearch = ["elasticsearch>=7.0"]
opensearch = ["opensearch-py>=2.0"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["eezy_logging"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "ipython",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pre-commit",
    "elasticsearch>=8.0",
    "opensearch-py>=2.0",
    "redis>=5.0",
]

[project.urls]
Homepage = "https://github.com/tintty1/eezy-logging"
Repository = "https://github.com/tintty1/eezy-logging"
Documentation = "https://github.com/tintty1/eezy-logging"
